--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <!--linling swiper css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Pictures/style.css">
 </head>
 <body>
     <header>
@@ -304,6 +304,6 @@
     <!--linking swiper script-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="Pictures/script.js"></script>
 </body>
 </html>
